Fix title and text for دوّار سراة عبيدة

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>دوّارة سراة عبيدة – تجربة واقع معزز</title>
+  <title>دوّار سراة عبيدة – تجربة واقع معزز</title>
 
   <!-- Google tag (gtag.js) -->
   <!-- ملاحظة: عدّل تاق التتبع (Measurement ID) لاحقًا حسب مشروعك الحالي -->
@@ -220,19 +220,11 @@
 
       <div class="header-text">
         <div class="tagline">تجربة واقع معزز لذكرى مكان</div>
-        <h1>دوّارة سراة عبيدة – توثيق بالواقع المعزز</h1>
+        <h1>دوّار سراة عبيدة</h1>
 
-        <div class="subtitle">
-          تجربة واقع معزز لتوثيق معلم محلي من ذاكرة سراة عبيدة بشكل رقمي.
-        </div>
-        <div class="note">
-          الهدف هو حفظ الأثر وإتاحته للجميع كذكرى يمكن استكشافها عبر الجوال.
-        </div>
-
-        <!-- نص بديل (صياغة جديدة) – بدون ذكر الهدم صراحة -->
         <div class="quote">
-          بعض المعالم لا تكون مجرد "شكل" في المدينة؛ بل تصبح مع الوقت <strong>علامة ذاكرة</strong> تربط الناس بالمكان.
-          وهذه التجربة محاولة لتثبيت حضور هذا المعلم رقمياً، ليبقى متاحاً للزيارة والاسترجاع … حتى عندما تتغير ملامح الواقع.
+          بعض المعالم لا تكون مجرد "شكل" يملئ الفراغ؛ بل تصبح مع الوقت <strong>علامة ذاكرة</strong> تربط الناس بالمكان.
+          وهذه التجربة محاولة لتثبيت حضور هذا المعلم رقمياً، ليبقى متاحاً للزيارة والاسترجاع … حتى عندما تتغير ملامح الواقع ، وبمشيئة الله ان هذا التغيير إلى الأفضل.
         </div>
 
         <div class="hint">
@@ -245,7 +237,7 @@
       <div class="viewer-inner">
         <model-viewer
           src="Sarat_Abidah.glb"
-          alt="مجسّم دوّارة سراة عبيدة"
+          alt="مجسّم دوّار سراة عبيدة"
           ar
           ar-modes="webxr scene-viewer quick-look"
           camera-controls
@@ -268,7 +260,7 @@
     </section>
 
     <div class="footer">
-      إذا عندك صورة قديمة للدوّار شاركها مع من حولك ، لأن الذاكرة جماعية.
+      محاولة حفظ الذكرى من قبل ثامر بن دعجم
     </div>
   </div>
 </body>
