Replace Google tag with Google Tag Manager
Updated Google Tag Manager integration and modified text content.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>دوّار سراة عبيدة – تجربة واقع معزز</title>
 
-  <!-- Google tag (gtag.js) -->
-  <!-- ملاحظة: عدّل تاق التتبع (Measurement ID) لاحقًا حسب مشروعك الحالي -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JV8556401"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    // ملاحظة: عدّل التاق هنا لاحقًا
-    gtag('config', 'G-0JV8556401');
-  </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M3D3CT7B');</script>
+<!-- End Google Tag Manager -->
 
   <!-- model-viewer -->
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
@@ -212,6 +208,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M3D3CT7B"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div class="page">
     <header>
       <div class="logo">
@@ -224,7 +224,8 @@
 
         <div class="quote">
           بعض المعالم لا تكون مجرد "شكل" يملئ الفراغ؛ بل تصبح مع الوقت <strong>علامة ذاكرة</strong> تربط الناس بالمكان.
-          وهذه التجربة محاولة لتثبيت حضور هذا المعلم رقمياً، ليبقى متاحاً للزيارة والاسترجاع … حتى عندما تتغير ملامح الواقع ، وبمشيئة الله ان هذا التغيير إلى الأفضل.
+          وهذه التجربة محاولة لتثبيت حضور هذا المعلم رقمياً، ليبقى متاحاً للزيارة والاسترجاع … حتى عندما تتغير ملامح الواقع.
+          <br> ودعواتنا أن يكون هذا التغيير إلى الأفضل.
         </div>
 
         <div class="hint">
@@ -260,7 +261,7 @@
     </section>
 
     <div class="footer">
-      محاولة حفظ الذكرى من قبل ثامر بن دعجم
+      An attempt to preserve the memory by Thamer @ThamerCloud
     </div>
   </div>
 </body>
