Update AR button text for clarity

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           reveal="auto">
 
           <button slot="ar-button" class="ar-button">
-            عرض الدوّار في الواقع المعزز
+            انقر هنا لعرض الدوّار في الواقع المعزز
           </button>
 
           <div id="ar-instructions">
